 build-pipeline-xilinx-synplify.apm Locally Modified          443 
 build-pipeline-altera.apm Locally Modified          443 
 build-pipeline-vico-xilinx.apm Locally Modified          443 
 build-pipeline-xilinx.apm Locally Modified          443 

Directory modules/leap/build-support/build-pipelines/stages
 synthesis/                Locally Added               0 

Directory modules/leap/build-support/build-pipelines/stages/synthesis
 synthesis-library.py      Locally Added               0 
 synthesis-library.awb     Locally Added               0 
 synthesis_library.awb     Locally Added               0 
 synthesis_functions.py    Locally Added               0 

Directory modules/leap/build-support/build-pipelines/stages/xilinx
 xilinx-xst.awb            Locally Modified          443 
 XILINX_XST.py             Locally Modified          443 

Directory modules/leap/build-support/build-pipelines/stages/synplify
 synplify.awb              Locally Modified          443 
 synplify-sub.awb          Locally Modified          443 
 SynplifySub.py            Locally Modified          443 


Resurrected support for the sub-build version of synplify.  This
version uses synplify for the user portion of the program and xst for
the physical platform interface. 

I also factored out some common functions used in both the synplify
and xst builds into a common library.

A warning - although the synplify build produces bitfiles, these
bitfiles appear to have some unresolved timing issues. As such, the
synplify build is somewhat unreliable at this time.


----------
keflemin    Date: Thu Jun  6 22:14:51 EDT 2013  CSN: CSN-leap-445
                  Fri Jun  7 02:14:51 UTC 2013


Directory modules/leap/libraries/platform-services/common-services
 common-services-standard.bsv Locally Modified          444 


Removed false dependency on virtual devices.  I'm not sure how this
ever compiled.

Some multiple-software code was tripping a circular dependency.